Fixing of some background on mobile

--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -133,7 +133,7 @@
             @include breakpoint-up(large) {
                 width: 25.0625rem;
                 height: 4.9375rem;
-                font-size:1.3rem;
+                font-size:1.0625rem;
             }
             cursor: pointer;
             &>a {
