--- a/scss/main.css
+++ b/scss/main.css
@@ -357,7 +357,7 @@ button:hover {
   .article__footer__button {
     width: 25.0625rem;
     height: 4.9375rem;
-    font-size: 1.3rem;
+    font-size: 1.0625rem;
   }
 }
 .article__footer__button > a {
